# learning_book

./: .gitignore  404.html  Makefile  README.md  index.html  mkdocs.yml  sitemap.xml
booknotes/cpp_debug/01/: index.html
booknotes/cpp_debug/01/code/add-symbol-file/: Makefile
booknotes/cpp_debug/02/: index.html
booknotes/cpp_debug/05/: index.html
booknotes/cpp_debug/10/: index.html
booknotes/csapp/01/: index.html
booknotes/csapp/02/: index.html
booknotes/csapp/03/: index.html
booknotes/csapp/04/: index.html
booknotes/csapp/05/: index.html
booknotes/csapp/08/: index.html
booknotes/csapp/09/: index.html
booknotes/csapp/10/: index.html
booknotes/cxydzwxy/compile/: index.html
booknotes/cxydzwxy/compile/images/: obj_section.drawio
booknotes/cxydzwxy/concurrency/: index.html
booknotes/cxydzwxy/link/dynamic/: index.html
booknotes/cxydzwxy/link/static/: index.html
booknotes/cxydzwxy/load/: index.html
booknotes/debug_hacks/advance/: index.html
booknotes/debug_hacks/basic/: index.html
booknotes/debug_hacks/dwarf/: index.html
booknotes/debug_hacks/gdb/: index.html
booknotes/hplsp/adv_io/: index.html
booknotes/hplsp/adv_io/images/: adv_io.drawio
booknotes/hplsp/multi_io/: index.html
booknotes/hplsp/socket/: index.html
booknotes/hplsp/tcp_ip/: index.html
booknotes/ldd/cdev/: index.html
booknotes/ldd/io/: index.html
booknotes/ldd/mem_port/: index.html
booknotes/ldd/module/: index.html
booknotes/ml/decision_tree/: index.html
booknotes/ml/decision_tree/code/: decision_tree_classifier.ipynb
booknotes/ml/linear_reg/: index.html
booknotes/ml/linear_reg/code/: gradient_descent.ipynb  polynomial_reg.ipynb  regularized_linear_models.ipynb  sklearn_reg.ipynb
booknotes/ml/naive_bayes/: index.html
booknotes/ml/naive_bayes/code/: gaussianNB.ipynb
booknotes/ml/perceptron/: index.html
booknotes/ml/perceptron/code/: perceptron.ipynb
booknotes/ml/svm/: index.html
booknotes/ml/svm/code/: svm_linear.ipynb  svm_nonlinear_poly.ipynb  svm_regression.ipynb
docs/: README.md
docs/booknotes/cpp_debug/01/: README.md
docs/booknotes/cpp_debug/02/: README.md
docs/booknotes/cpp_debug/05/: README.md
docs/booknotes/cpp_debug/10/: README.md
docs/booknotes/csapp/: README.md
docs/booknotes/csapp/01/: README.md
docs/booknotes/csapp/02/: README.md
docs/booknotes/csapp/03/: README.md
docs/booknotes/csapp/04/: README.md
docs/booknotes/csapp/05/: README.md
docs/booknotes/csapp/08/: README.md
docs/booknotes/csapp/09/: README.md
docs/booknotes/csapp/10/: README.md
docs/booknotes/cxydzwxy/compile/: README.md
docs/booknotes/cxydzwxy/concurrency/: README.md
docs/booknotes/cxydzwxy/link/: README.md
docs/booknotes/cxydzwxy/load/: README.md
docs/booknotes/cxydzwxy/memory/: README.md
docs/booknotes/debug_hacks/adv_debug/: README.md
docs/booknotes/debug_hacks/advance/: README.md
docs/booknotes/debug_hacks/app_debug/: README.md
docs/booknotes/debug_hacks/basic/: README.md
docs/booknotes/debug_hacks/dwarf/: README.md
docs/booknotes/debug_hacks/gdb/: README.md
docs/booknotes/hplsp/adv_io/: README.md
docs/booknotes/hplsp/multi_io/: README.md
docs/booknotes/hplsp/signal/: README.md
docs/booknotes/hplsp/sock_base/: README.md
docs/booknotes/hplsp/sock_tcp/: README.md
docs/booknotes/hplsp/socket/: README.md
docs/booknotes/hplsp/tcp_ip/: README.md
docs/booknotes/ldd/cdev/: README.md
docs/booknotes/ldd/io/: README.md
docs/booknotes/ldd/mem_port/: README.md
docs/booknotes/ldd/module/: README.md
docs/booknotes/ml/decision_tree/: README.md
docs/booknotes/ml/linear_reg/: README.md
docs/booknotes/ml/naive_bayes/: README.md
docs/booknotes/ml/perceptron/: README.md
docs/booknotes/ml/svm/: README.md
docs/demos/cmake/: README.md
docs/demos/cmake/code/custom/src/: CMakeLists.txt  Makefile  main.cpp
docs/demos/cmake/code/custom/src/internal/: animal.cpp.cog  animal.json
docs/demos/cmake/code/exec/src/: CMakeLists.txt
docs/demos/gdb/: README.md
docs/demos/vue/: README.md  components.md
docs/demos/vue/components/: README.md
docs/demos/vue/demo/: README.md
docs/demos/vue/directives/: README.md
docs/demos/vue/intro/: README.md
docs/demos/webassembly/: README.md
docs/essays/20250127/: README.md
docs/projects/cmake/: README.md
docs/projects/gdb/: README.md
docs/projects/vue/components/: README.md
docs/projects/vue/demo/: README.md
docs/projects/vue/intro/: README.md
docs/projects/webassembly/: README.md
docs/topics/cmake/: README.md
docs/topics/cmake/code/liba/test/: CMakeLists.txt  main.cpp
docs/topics/flex_bison/: README.md
docs/topics/tcl_tk_in_c/: README.md
docs/topics/vue/components/: README.md
docs/topics/vue/demo/: README.md
docs/topics/vue/intro/: README.md
docs/topics/webassembly/: README.md
essays/20250127/: index.html
overrides/: main.html
search/: search_index.json
topics/cmake/: index.html
topics/cmake/code/custom/: CMakeLists.txt  Makefile
topics/cmake/code/custom/src/internal/: animal.h
topics/cmake/code/exec/: CMakeLists.txt
topics/cmake/code/exec/src/: CMakeLists.txt  main.cpp
topics/cmake/code/liba/src/: CMakeLists.txt  hello.h
topics/cmake/code/libso/: CMakeLists.txt
topics/cmake/code/src_import/src/: CMakeLists.txt  main.cpp
topics/cmake/code/src_import/src/src1/: bar.cpp  share.cpp  share.h
topics/cmake/code/src_import/src/src2/: foo.h
topics/flex_bison/: index.html
topics/flex_bison/code/bison_calc/: Makefile  calc.cpp  calc.y  main.cpp
topics/flex_bison/code/flex_c_wc/: Makefile  c_wc.lex  lexer.cpp  main.cpp
topics/flex_bison/image/: flex_bison.drawio
topics/tcl_tk_in_c/: index.html
topics/vue/components/: index.html
topics/vue/demo/: index.html
topics/vue/intro/: index.html
topics/webassembly/: index.html
topics/webassembly/code/hello_c/: api.wasm
topics/webassembly/code/hello_cpp/: Makefile  api.js  api.wasm
topics/webassembly/code/mem/: api.c  api.wasm
topics/webassembly/code/mem_64/: Makefile  api.js  index.html
topics/webassembly/code/mem_64_arr/: api.js  api.wasm  index.html
(+616 files in other folders)
